--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT
 spring.jackson.default-property-inclusion=non_null
 spring.mvc.async.request-timeout = 3600000
+spring.datasource.tomcat.removeAbandoned=true
