--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@
 /tabular
 /pdi_integrations/koski_bulk/conf
 /pdi_integrations/odw/conf
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+*.suo
