CSCVIPUNEN-2475 added new shell parameter

--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 api.db.schema=api
 spring.datasource.platform=sqlserver
-spring.datasource.url=jdbc:sqlserver://${db.host:localhost}:${db.port:1433};databaseName=ANTERO
+spring.datasource.url=jdbc:sqlserver://${db.host:localhost}:${db.port:1433};databaseName=${db.name:ANTERO}
 spring.datasource.initialize=false
 spring.datasource.validation-query=select 1
 spring.datasource.test-on-borrow=true
