--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-api.db.schema=API
+api.db.schema=api
 spring.datasource.platform=sqlserver
 spring.datasource.url=jdbc:sqlserver://${db.host:localhost}:${db.port:1433};databaseName=${db.name:ANTERO}
 spring.datasource.initialize=false
