--- a/api/src/main/resources/application-dev.properties
+++ b/api/src/main/resources/application-dev.properties
@@ -1,7 +1,10 @@
-logging.file=out/antero-api.log
-spring.datasource.platform=h2
+logging.file.name=out/antero-api.log
+spring.sql.init.platform=h2
 api.db.schema=
-spring.datasource.url=jdbc:h2:~/antero;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:h2:file:~/antero;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.continue-on-error=false
+spring.sql.init.mode=always
+spring.sql.init.continue-on-error=false
+# Needed for springfox 3 https://github.com/springfox/springfox/issues/3462
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
