--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,6 +1,8 @@
 api.db.schema=api
-spring.datasource.platform=sqlserver
+spring.sql.init.platform=sqlserver
 spring.datasource.url=jdbc:sqlserver://${db.host:localhost}:${db.port:1433};databaseName=${db.name:ANTERO}
-spring.datasource.initialize=false
+spring.sql.init.mode=never
 spring.datasource.validation-query=select 1
 spring.datasource.test-on-borrow=true
+# Needed for springfox 3 https://github.com/springfox/springfox/issues/3462
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
