--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
-logging.file=logs/antero-api.log
-server.context-path=/api
+logging.file.name=logs/antero-api.log
+server.servlet.context-path=/api
 server.compression.enabled=true
 server.compression.mime-types=application/json
 spring.cache.jcache.config=classpath:ehcache3.xml
