--- a/api/src/test/resources/test_application.properties
+++ b/api/src/test/resources/test_application.properties
@@ -1,11 +1,13 @@
-server.context-path=/api
+server.servlet.context-path=/api
 api.db.schema=
 spring.datasource.url=jdbc:h2:mem:ANTERO;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false
 spring.datasource.username=sa
 spring.datasource.password=
 # Disable file logging
-logging.file=
+logging.file.name=
 # Enable pretty printing
 spring.jackson.serialization.indent_output=true
-spring.datasource.initialize=false
+spring.sql.init.mode=never
 spring.cache.type=NONE
+# Needed for springfox 3 https://github.com/springfox/springfox/issues/3462
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
