--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.2.RELEASE'
+        springBootVersion = '2.7.5'
     }
     repositories {
         jcenter()
@@ -14,6 +14,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'pl.allegro.tech.build.axion-release'
 
 scmVersion {
@@ -30,13 +31,12 @@ scmVersion {
 
 version = scmVersion.version
 
-tasks.withType(JavaCompile) {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-}
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
-springBoot {
-    executable = true
+
+bootJar {
+    launchScript()
 }
 
 bootRun {
@@ -54,19 +54,26 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-jdbc')
-    compile('org.springframework.boot:spring-boot-starter-cache')
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('javax.cache:cache-api')
-    compile('org.ehcache:ehcache:3.3.1')
-    compile('com.github.vineey:rsql-querydsl-all:2.0.0.RELEASE')
-    compile('com.querydsl:querydsl-sql:4.4.0')
-    compile('io.springfox:springfox-swagger2:2.6.1')
-    compile('io.springfox:springfox-swagger-ui:2.6.1')
-    compile('org.apache.commons:commons-lang3:3.5')
-    runtime('org.springframework.boot:spring-boot-devtools')
-    runtime('com.h2database:h2')
-    runtime('com.microsoft.sqlserver:mssql-jdbc')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-jdbc')
+    implementation('org.springframework.boot:spring-boot-starter-cache')
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation('javax.cache:cache-api')
+    implementation('org.ehcache:ehcache:3.3.1')
+    implementation('com.github.vineey:rsql-querydsl-all:2.0.0.RELEASE')
+    implementation('com.querydsl:querydsl-sql:5.0.0')
+    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation('org.apache.commons:commons-lang3:3.5')
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    runtimeOnly('com.h2database:h2:1.4.186')
+    runtimeOnly('com.microsoft.sqlserver:mssql-jdbc')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
