Spring upgrade cleanup

--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -5,4 +5,4 @@ spring.sql.init.mode=never
 spring.datasource.validation-query=select 1
 spring.datasource.test-on-borrow=true
 # Needed for springfox 3 https://github.com/springfox/springfox/issues/3462
-#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
