--- a/api/src/main/resources/application-dev.properties
+++ b/api/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-logging.file.name=out/antero-api.log
+logging.file.name=logs/antero-api.log
 spring.sql.init.platform=h2
 api.db.schema=
 spring.datasource.url=jdbc:h2:file:~/antero;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false
