--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.7.7'
+        springBootVersion = '2.7.11'
     }
     repositories {
         jcenter()
@@ -71,7 +71,7 @@ dependencies {
     runtimeOnly('com.h2database:h2:1.4.186')
     runtimeOnly('com.microsoft.sqlserver:mssql-jdbc')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 
 tasks.named('test') {
