--- a/api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,12 +1,12 @@
 {
   "properties": [
     {
-      "name": "oiva.analytics.logging.file.name",
+      "name": "api.analytics.logging.file.name",
       "type": "java.lang.String",
       "description": "Analytiikka tiedoston nimi ilman polkumääritystä"
     },
     {
-      "name": "oiva.analytics.logging.file.path",
+      "name": "api.analytics.logging.file.path",
       "type": "java.lang.String",
       "description": "Analytiikka tiedostopolku esim. logs/"
     }
