--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 logging.file.name=logs/antero-api.log
-oiva.analytics.logging.file.name=oiva-api-analytics.csv
-oiva.analytics.logging.file.path=logs/
+api.analytics.logging.file.name=api-analytics.csv
+api.analytics.logging.file.path=logs/
 server.servlet.context-path=/api
 server.compression.enabled=true
 server.compression.mime-types=application/json
