--- a/api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -9,5 +9,15 @@
       "name": "api.analytics.logging.file.path",
       "type": "java.lang.String",
       "description": "Analytiikka tiedostopolku esim. logs/"
+    },
+    {
+      "name": "api.analytics.logging.delimiter",
+      "type": "java.lang.String",
+      "description": "Analytiikka erotinmerkki"
+    },
+    {
+      "name": "api.analytics.logging.query.delimiter",
+      "type": "java.lang.String",
+      "description": "Analytiikka erotinmerkki rajapinnan parametreille"
     }
   ] }
