--- a/api/build.gradle
+++ b/api/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation('com.querydsl:querydsl-sql:5.0.0')
     implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'
     implementation('org.apache.commons:commons-lang3:3.5')
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation ('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0')
     implementation('jakarta.validation:jakarta.validation-api')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     runtimeOnly('com.h2database:h2:1.4.186')
