--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jackson.default-property-inclusion=non_null
 spring.mvc.async.request-timeout = 3600000
 spring.datasource.tomcat.removeAbandoned=true
 spring.jpa.open-in-view=true
+springdoc.packagesToScan=fi.csc.antero
