--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@
 /.vs/slnx.sqlite
 /.vs/ProjectSettings.json
 *.suo
+/.vs/antero/v17/DocumentLayout.backup.json
+/.vs/antero/v17/DocumentLayout.json
+/.vs/antero/v17/.wsuo
